--- a/packages/cargo-stylus/vending_machine/Cargo.toml
+++ b/packages/cargo-stylus/vending_machine/Cargo.toml
@@ -11,6 +11,7 @@ alloy-sol-types = "=0.7.6"
 mini-alloc = "0.4.2"
 stylus-sdk = "0.6.0"
 hex = "0.4.3"
+stylus-cache-sdk = "0.1.0"
 
 [dev-dependencies]
 tokio = { version = "1.12.0", features = ["full"] }
